2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Ricardo Martins:
	bug #36384 ATxmega32A4 usersig size
	* avrdude.conf.in: Revamp all the ATxmega* entries.  Add new
	entries for ATxmega128A1U, ATxmega128A3U, ATxmega128A4U,
	ATxmega128B1, ATxmega128B3, ATxmega128C3, ATxmega128D3,
	ATxmega16A4U, ATxmega16C4, ATxmega192A3U, ATxmega192C3,
	ATxmega192D3, ATxmega256A3BU, ATxmega256A3U, ATxmega256C3,
	ATxmega256D3, ATxmega32A4U, ATxmega32C4, ATxmega384C3,
	ATxmega384D3, ATxmega64A1U, ATxmega64A3U, ATxmega64A4U,
	ATxmega64B1, ATxmega64B3, ATxmega64C3, ATxmega64D3

2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #35456 The progress bar for STK500V2 programmer is "wrong".
	* avr.c (avr_read, avr_write): Change the progress reporting for
	paged read/write from per-address to per-considered-page.  This
	ought to give a realistic estimation about the time still to be
	spent.

2013-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #34277: avrdude reads wrong byte order if using avr911 (aka butterfly)
	* butterfly.c (butterfly_read_byte_flash): Swap bytes received.

2013-09-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #37768 Poll usbtiny 100 times at init time to handle low-clock devices
	* doc/avrdude.texi: Add a FAQ entry about how to connect to a
	target where the firmware has reduced the internal clock speed.

2013-09-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #28344 chip_erase_delay too short for ATmega324P, 644, 644P, and 1284P
	* avrdude.conf: Bump the chip_erase_delay for all ATmega*4 devices
	to 55 ms.  While the datasheet still claims 9 ms, all the XML files
	tell either 45 or 55 ms, depending on STK600 or not.

2013-09-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* fileio.c (fileio): Don't exit(1) if something goes wrong; return
	-1 instead.  Don't refer to obsolete option -f to specify the file
	format.

2013-09-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Matthias Trute: